[gd_scene load_steps=7 format=3 uid="uid://dqeoyiig2xv07"]

[ext_resource type="Script" path="res://scenes/misc/settings_window.gd" id="1_1l533"]
[ext_resource type="PackedScene" uid="uid://blev8t8g4iq0m" path="res://scenes/misc/icon_button.tscn" id="2_7d68x"]
[ext_resource type="Texture2D" uid="uid://2jdd70qmbibk" path="res://assets/icons/x.png" id="3_7ubp8"]
[ext_resource type="PackedScene" uid="uid://wmclosx28ofb" path="res://scenes/misc/modal_dialog.tscn" id="4_2kdkh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jebsj"]
bg_color = Color(0, 0.301961, 0.301961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3s2hp"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="SettingsWindow" type="CenterContainer"]
custom_minimum_size = Vector2(1280, 720)
script = ExtResource("1_1l533")

[node name="FullscreenClose" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jebsj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IconButton" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar" instance=ExtResource("2_7d68x")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_7ubp8")

[node name="GameSound" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game sound enabled"

[node name="UseEnProxies" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Use Proxies when available"

[node name="ShowCardInfo" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Card Information"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ShowOverlayInfo" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "with Overlay"

[node name="ShowPanelInfo" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "with Panel"

[node name="LanguageBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LanguageBox"]
layout_mode = 2
text = "Language"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LanguageBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageSelect" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/LanguageBox"]
layout_mode = 2

[node name="UpdateCardImagesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Update Card Images"

[node name="ExitGameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="DownloadingPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="DownloadingPanel"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="DownloadingPanel/CenterContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3s2hp")

[node name="VBox" type="VBoxContainer" parent="DownloadingPanel/CenterContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
text = "Downloading Card Pack...."
horizontal_alignment = 1

[node name="Progress" type="HBoxContainer" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="BytesDownloaded" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox/Progress"]
layout_mode = 2
text = "1234"

[node name="Label" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox/Progress"]
layout_mode = 2
text = "/"

[node name="TotalBytes" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox/Progress"]
layout_mode = 2
text = "1234"

[node name="ProgressPercent" type="HBoxContainer" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="Value" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox/ProgressPercent"]
layout_mode = 2
text = "1"

[node name="Label" type="Label" parent="DownloadingPanel/CenterContainer/PanelContainer/VBox/ProgressPercent"]
layout_mode = 2
text = "%"

[node name="ModalDialog" parent="." instance=ExtResource("4_2kdkh")]
visible = false
layout_mode = 2

[connection signal="pressed" from="FullscreenClose" to="." method="close_window"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TitleBar/IconButton" to="." method="close_window"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/GameSound" to="." method="change_setting" binds= ["GameSound"]]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/UseEnProxies" to="." method="change_setting" binds= ["UseEnProxies"]]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ShowCardInfo" to="." method="change_card_info_setting" binds= ["ShowCardInfo"]]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ShowOverlayInfo" to="." method="change_card_info_setting" binds= ["ShowOverlayInfo"]]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ShowPanelInfo" to="." method="change_card_info_setting" binds= ["ShowPanelInfo"]]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/LanguageBox/LanguageSelect" to="." method="_on_language_select_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UpdateCardImagesButton" to="." method="_on_update_card_images_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_button_pressed"]
